    overlay scrollbars have been disabled.
25. Add note about 'AlbumArtist' tag to initial settings wizard.
26. Use QDesktopWidget::logicalDpiX()/96.0 to set DPI scale factor.
27. Expand ~/ QDir::homePath() when read from UI.
28. Save QDir::homePath()/ as ~ in config file, and convert when read.
29. Allow all bar title and artist columns to be hidden in playqueue.

1.4.2
-----
1. When guessing song details from filename (due to missing tags), remove any
   extension - not just three letter extensions!
2. In tag editor, only show '(Various)' hint for the 'All tracks' entry.
3. Also capitalise composer in tag editor.
4. Resize device properties dialog when changing transcoder.
5. Initialise sidebar icon sizes before constructing.
6. Display multiple genres as separate entries in playlists page genre combo.
7. Resize cover in grouped view if it is too wide.
8. In context view, when creating links to similar artists compare artists
   names case-insensitively.
9. Fix downloading of podcasts when url is redirected.

1.4.1
-----
 1. Remove unused var warning when compiling without online services.
 2. Remove some moc/QObject warnings in KDE builds without streams or http
    server.
 3. Update current song to scrobble, even if disabled, so that when enabled we
    can scrobble.
 4. Seems like MPDSribble itself is broken with regards to sending "love"
    status, so remove MPDScribble from list of scrobblers.
 5. Last.fm replies are XML, so decode these properly!
 6. Don't log scrobbler session key to debug file.
 7. Remove extra margin in podcast settings dialog.
 8. When adjusting track numbers in tag editor, start from first actual track.
 9. Only enable 'center on current track' action if there is a current track.
10. Use comma to split multiple genres in tooltip and table views.
11. Don't URL encode scrobble keys, just values.
12. If now playing has been sent, track has not been scrobbled, then when track