@@ -43,6 +43,7 @@
 27. Expand ~/ QDir::homePath() when read from UI.
 28. Save QDir::homePath()/ as ~ in config file, and convert when read.
 29. Allow all bar title and artist columns to be hidden in playqueue.
+30. Add option to disable song info tooltips.
 
 1.4.2
 -----
